css/style.css
* {
    margin: 0;
    padding: 0;
}

html {
    background-color: #59616d;
}

h2 {
    margin-top: 50px;
    color: #f57253;
    text-align: center;
}

.jqcarousel {
    position: relative;
    font-family: Verdana, Arial, sans-serif;
}

.jqcarousel-frame {
    position: relative;
    margin: 70px auto;
    overflow: hidden;
}

.new-year {
    width: 668px;
}

.jqcarousel-content {
    width: 10000px;
    position: relative;
}

.new-year__slide {
    display: inline-block;
    width: 210px;
    margin: 0 5px;
    /*padding: 4px;*/
    /*border: 1px solid #9c8568;*/
}

.new-year__slide:first-child {
    margin-left: 0;
}

.new-year__slide:last-child {
    margin-right: 0;
}

.new-year__slide figcaption {
    margin-top: 5px;
    color: #c1c8d2;
    font-style: italic;
    text-align: center;
}

.jqcarousel img {
    width: 100%;
}

.jqcarousel-controls {
    position: relative;
    margin: 0 auto;
}

.years {
    top: -175px;
    width: 700px;
}

.left,
.right {
    display: inline-block;
    padding: 5px;
    background-color: #b7482e;
    color: #fff;
    border-radius: 3px;
    cursor: pointer;
}

.left {
    position: absolute;
    left: -40px;
}

.right {
    position: absolute;
    right: -40px;
}

.boring {
    color: grey;
}

/* Second carousel */

label {
    /*display: block;
    margin: 20px;
    font-family: "Vedrana", sans-serif;
    font-size: 20px;
    font-weight: normal;
    text-align: center;*/
}

img {
    /*width: 640px;*/
}

.easter {
    width: 600px;
    border: 5px solid #fff;
    /*box-shadow: 0 0 5px 0 #bbb;*/
}

.easter__slide {
    display: inline-block;
    width: 640px;
}

.arrows {
    position: relative;;
    top: -300px;
    margin: 0 auto;
    width: 600px;
    /*height: 20px;*/
}

.prev,
.next {
    position: absolute;
    width: 20px;
    height: 20px;
    padding: 5px;
    transition: opacity .3s;
    border: 1px solid #d3d3de;
    border-radius: 4px;
    color: #d3d3de;
    font-size: 40px;
    line-height: 15px;
    text-align: center;
    text-decoration: none;
    opacity: .7;
}

.prev:hover,
.next:hover {
    opacity: 1;
}

.prev {
    left: -50px;
}

.next {
    right: -50px;
}

.jcarousel-pagination {
    text-align: center;
}

.jcarousel-pagination a {
    display: inline-block;
    width: 15px;
    height: 15px;
    margin: 20px 5px;
    transition: background-color .3s;
    border-radius: 50%;
    background-color: #fff;
    box-shadow: 0 0 5px 0 #999;
}

.jcarousel-pagination a.active {
    background-color: #9e9c83;
}

